Migrating to Python 3.x

--- a/src/ui/about.html
+++ b/src/ui/about.html
@@ -19,9 +19,9 @@ h2{color:#9A7C63}
 </head>
 <body>
 <header>
-<img id="" src="img/logo_smart_labex.jpg" width="254" height="100"/>
-<img id="" src="img/logo_isir.jpg"/>
-<img id="" src="img/logo_UPMC.png" width="254" height="100"/>
+<img id="1" src="img/logo_smart_labex.jpg" width="254" height="100"/>
+<img id="2" src="img/logo_isir.jpg"/>
+<img id="3" src="img/logo_UPMC.png" width="254" height="100"/>
 </header>
 <article>
 <h1>Welcome in the SyncPy library Interface !</h1><h2>$name (version $version)</h2>
